manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-errors-service
spec:
  selector:
    app: sample-errors
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
